<resources>
    <string name="app_name">Wallpaper Manager</string>
    <string name="request_enabled">Live wallpaper is not currently enabled. Enable wallpaper?</string>
    <string name="confirm_enabled">Live wallpaper enabled!</string>

    <string name="loading_progress">%d/%d</string>

    <!-- Wallpaper -->
    <string-array name="wallpaper_interval_type_spinner">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>

    <!-- Albums -->

    <string name="albums_group_by_prompt">Group by:</string>
    <string-array name="albums_type_spinner">
        <item>Folder</item>
        <item>Tag</item>
    </string-array>
    <string name="message_no_albumables">Press \'New\' to add a %s</string>

    <plurals name="folder_title_plural">
        <item quantity="one">%s (%d image)</item>
        <item quantity="other">%s (%d images)</item>
    </plurals>
    <string name="message_rename_failed_invalid_name">Name contains invalid characters.</string>
    <string name="message_rename_failed_generic">Rename failed!</string>
    <string name="message_folder_already_exists">Folder already exists!</string>
    <string name="message_tag_already_exists">Folder already exists!</string>

    <!-- Preferences -->
    <string-array name="settings_position_descriptions">
        <item>Will maintain image aspect ratio, scaling to fit within the screen.</item>
        <item>Will maintain image aspect ratio, scaling to fill the entire screen.</item>
        <item>Will scale X and Y separately to fill the entire screen.</item>
    </string-array>
    <string-array name="settings_transition_descriptions">
        <item>A simple cross-fade transition</item>
        <item>New image will slide down from the top, pushing the old one off screen.</item>
        <item>New image will fill a gradually expanding circle, originating from the tap location.</item>
    </string-array>
    <string name="placeholder_string">placeholder</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_home_screen">Home screen</string>
    <string name="header_album">Album</string>
    <string name="header_interval">Change wallpaper every</string>
    <string name="header_double_tap">Change wallpaper when double-tapping on home screen</string>
    <string name="title_lock">Lock screen</string>
    <string name="text_use_home">Use home screen album</string>
    <string name="content_desc_preview">Image preview</string>
    <string name="header_root">Root Folder</string>
    <string name="summary_root">Base folder to retrieve images from</string>
    <string name="header_position">Image Position</string>
    <string name="summary_position">How to handle images of different sizes</string>
    <string name="header_random_order">Random wallpaper order</string>
    <string name="summary_order">Order in which wallpapers are displayed</string>
    <string name="header_order">Wallpaper Order</string>
    <string name="header_general">General</string>
    <string name="header_lock_blur">Blur lock screen</string>
    <string name="text_change">Change</string>
    <string name="text_fit">Fit</string>
    <string name="text_fill">Fill</string>
    <string name="text_stretch">Stretch</string>

    <!-- Pref Keys -->
    <string name="uninitialized">NULL</string>

    <string name="key_root_folder">KEY_ROOT_FOLDER</string>
    <string name="key_position">KEY_POSITION</string>
    <string name="key_transition">KEY_TRANSITION</string>
    <string name="key_random_order_enabled">KEY_RANDOM_ORDER_ENABLED</string>
    <string name="key_album_view_type">KEY_ALBUM_VIEW_TYPE</string>
    <string name="key_wallpaper_lock_notification">KEY_WALLPAPER_LOCK_NOTIFICATION</string>
    <string name="key_wallpaper_lock_blur">KEY_WALLPAPER_LOCK_BLUR</string>
    <string name="key_wallpaper_lock_album">KEY_WALLPAPER_LOCK_ALBUM</string>
    <string name="key_wallpaper_lock_use_home">KEY_WALLPAPER_LOCK_USE_HOME</string>
    <string name="key_wallpaper_home_double_tap_enabled">KEY_WALLPAPER_DOUBLE_TAP_ENABLED</string>
    <string name="key_wallpaper_interval_enabled">KEY_WALLPAPER_INTERVAL_ENABLED</string>
    <string name="key_wallpaper_interval_value">KEY_WALLPAPER_INTERVAL_VALUE</string>
    <string name="key_wallpaper_interval_type">KEY_WALLPAPER_INTERVAL_TYPE</string>
    <string name="key_wallpaper_home_album">KEY_WALLPAPER_HOME_ALBUM</string>

    <string name="text_new">New</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>

    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="dummy_button">Dummy Button</string>

    <string name="message_loading">Loading…</string>
    <string name="text_back">Back</string>
    <string name="text_new_folder">New Folder</string>
    <string name="wallpaper_description">temp_description</string>
    <string name="header_transition">Transition</string>
    <string name="summary_transition">How transitions should be animated</string>
    <string name="transition_fade">Fade</string>
    <string name="transition_page">Page</string>
    <string name="transition_circle">Circle</string>
    <string name="header_lock_notification">Display wallpaper change notification</string>
    <string name="notification_message">Change lock screen wallpaper</string>
    <string name="message_request_enable">NOTE: Features will not work unless live wallpaper is set. Click here to set live wallpaper.</string>
    <string name="placeholder_fraction">9/10</string>
</resources>
