<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Wallpaper Screen Values -->

    <Preference
        android:key="@string/key_wallpaper_interval_enabled"
        android:defaultValue="1" />

    <Preference
        android:key="@string/key_wallpaper_interval_value"
        android:defaultValue="1" />

    <Preference
        android:key="@string/key_wallpaper_interval_type"
        android:defaultValue="1" />

    <Preference
        android:key="@string/key_wallpaper_home_double_tap_enabled"
        android:defaultValue="false" />

    <Preference
        android:key="@string/key_wallpaper_lock_use_home"
        android:defaultValue="true" />

    <Preference
        android:key="@string/key_wallpaper_lock_blur"
        android:defaultValue="false" />

    <Preference
        android:key="@string/key_wallpaper_home_album"
        android:defaultValue="@string/uninitialized" />

    <Preference
        android:key="@string/key_wallpaper_lock_album"
        android:defaultValue="@string/uninitialized" />

    <!-- Albums Screen Values -->
    <Preference
        android:key="@string/key_album_view_type"
        android:defaultValue="0"/>

    <!-- Preference Screen Values -->

    <Preference
        android:key="@string/key_root_folder"
        android:defaultValue="null" />

    <Preference
        android:key="@string/key_position"
        android:defaultValue="1" />

    <Preference
        android:key="@string/key_transition"
        android:defaultValue="0" />

    <Preference
        android:key="@string/key_random_order_enabled"
        android:defaultValue="false" />
</PreferenceScreen>